[package]
name = "square_reed_solomon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { version = "^0.4.0", default-features = false }
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-poly-commit = { git = "https://github.com/arkworks-rs/poly-commit" }
ark-serialize = "0.4.2"
ark-test-curves = { version = "0.4.2", features = ["bls12_381_curve"] }
rand = "0.8.5"
rs_merkle = "1.4.0"
